--- a/build.xml
+++ b/build.xml
@@ -19,13 +19,15 @@
     </javac>
 
     <mkdir dir="build/test-reports"/>
-    <junit printsummary="true" outfile="reports/result">
+    <junit printsummary="true">
       <classpath>
         <pathelement path="build/test-classes"/>
         <pathelement path="build/classes"/>
         <fileset dir="lib" includes="*.jar"/>
       </classpath>
+    	<test outfile="reports/result">
     		<formatter type="xml"/>
+    	</test>
       <batchtest todir="build/test-reports">
         <fileset dir="test" includes="**/*Test.java"/>
       </batchtest>
