--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
         <pathelement path="build/classes"/>
         <fileset dir="lib" includes="*.jar"/>
       </classpath>
-    	<test outfile="reports/result">
+    	<test name="junit.assertequals.JUnitAssertEquals" outfile="reports/result">
     		<formatter type="xml"/>
     	</test>
       <batchtest todir="build/test-reports">
